<resources>
    <string name="app_name">iPizza</string>
    <string name="bottombarcell_first_name">待处理</string>
    <string name="bottombarcell_second_name">已处理</string>
    <string name="bottombarcell_third_name">统  计</string>
    <string name="bottombarcell_forth_name">店  铺</string>

    <string name="unsolvedbarcell_first_name">新订单</string>
    <string name="unsolvedbarcell_second_name">未配送</string>
    <string name="unsolvedbarcell_third_name">催 单</string>
    <string name="unsolvedbarcell_forth_name">评价与建议</string>
</resources>
