<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/bottombarbackground">

    <RelativeLayout
        android:id="@+id/cell_new_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/unsolvedbar_newintent_txt"
            android:gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_height="36dp"
            android:layout_width="@dimen/unsolvedbar_cell_width"
            android:text="@string/unsolvedbarcell_first_name"
            android:textSize="12sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_undistributed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/unsolvedbar_undistributed_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_height="36dp"
            android:layout_width="@dimen/unsolvedbar_cell_width"
            android:text="@string/unsolvedbarcell_second_name"
            android:textSize="12sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/unsolvedbar_reminder_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_height="36dp"
            android:layout_width="@dimen/unsolvedbar_cell_width"
            android:text="@string/unsolvedbarcell_third_name"
            android:textSize="13sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/unsolvedbar_comments_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_height="36dp"
            android:layout_width="@dimen/unsolvedbar_cell_comments_width"
            android:textSize="13sp"
            android:text="@string/unsolvedbarcell_forth_name">
        </TextView>
    </RelativeLayout>
</LinearLayout>
