<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/bottombarbackground">

    <RelativeLayout
        android:id="@+id/cell_unsolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/bottombar_unsolved_btn"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/bottombar_cell_width"
            android:layout_height="30dp"
            android:background="@drawable/bottombar_grey_device">
            </Button>
        <TextView
            android:id="@+id/bottombar_unsolved_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bottombar_unsolved_btn"
            android:layout_height="18dp"
            android:layout_width="@dimen/bottombar_cell_width"
            android:text="@string/bottombarcell_first_name"
            android:textSize="12sp">
            </TextView>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/bottombar_solved_btn"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/bottombar_cell_width"
            android:layout_height="30dp"
            android:background="@drawable/bottombar_grey_status">
        </Button>
        <TextView
            android:id="@+id/bottombar_solved_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bottombar_solved_btn"
            android:layout_height="18dp"
            android:layout_width="@dimen/bottombar_cell_width"
            android:text="@string/bottombarcell_second_name"
            android:textSize="12sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/bottombar_statistic_btn"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/bottombar_cell_width"
            android:layout_height="30dp"
            android:background="@drawable/bottombar_grey_video">
        </Button>
        <TextView
            android:id="@+id/bottombar_statistic_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bottombar_statistic_btn"
            android:layout_height="18dp"
            android:layout_width="@dimen/bottombar_cell_width"
            android:text="@string/bottombarcell_third_name"
            android:textSize="13sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cell_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/bottombar_shop_btn"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/bottombar_cell_width"
            android:layout_height="30dp"
            android:background="@drawable/bottom_grey_account">
        </Button>
        <TextView
            android:id="@+id/bottombar_shop_txt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bottombar_shop_btn"
            android:layout_height="18dp"
            android:layout_width="@dimen/bottombar_cell_width"
            android:textSize="13sp"
            android:text="@string/bottombarcell_forth_name">
        </TextView>
    </RelativeLayout>
</LinearLayout>
